# LiveVideo

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jorkyin/livevideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecoder.cpp  Decoder.cpp  FrameQueue.cpp  PacketQueue.cpp  VideoDecoder.cpp  easyPlayer.cpp  native-lib.cpp  opensles.cpp
app/src/main/cpp/include/: AudioDecoder.h  Decoder.h  Frame.h  FrameQueue.h  PacketQueue.h  PlayerState.h  VideoDecoder.h  easyPlayer.h  opensles.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/com/jorkyin/livevideo/: MainActivity.java  Player.java
app/src/main/java/com/jorkyin/livevideo/events/: VideoEventListener.java
app/src/main/java/com/jorkyin/livevideo/utils/: RuntimePermissionManager.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/test/java/com/jorkyin/livevideo/: ExampleUnitTest.java
